# spotigod

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  setup_env.sh
src/: main.rs
src/config/: mod.rs
src/spotify/: client.rs  mod.rs  models.rs
src/ui/: mod.rs
